# dishka-example

./: Makefile  plot_dependencies.py  pyproject.toml  run_cli.py  run_http.py
src/: application.py  domain.py  infrastructure.py  presentation.py  setup.py
tests/: test_application.py  test_domain.py  test_presentation.py
