[project]
name = "dishka-example"
version = "0.1.0"
description = "Simple demonstration of using Dishka for dependency injection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.6.0",
    "pydantic<3.0.0,>=2.9.0",
    "fastapi<1.0.0,>=0.115.0",
    "uvicorn<1.0.0,>=0.32.0",
    "uvloop<1.0.0,>=0.21.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
